<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include
        android:id="@+id/MSIinclude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/layout_main_title" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center" >
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <Button
                android:id="@+id/MBTNSorting"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="0dip"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Click"
                android:text="@string/user_pwd_update"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <Button
                android:id="@+id/MBTNDistribution"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="0dip"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Click"
                android:text="@string/user_pwd_Distribution"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <Button
                android:id="@+id/MBTNAdministration"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="0dip"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Click"
                android:text="@string/user_pwd_Administration"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <TableRow android:gravity="center" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>
    </TableLayout>

</LinearLayout>